Replace Spark framework with Jetty in MockedRestServerEngine; update pom.xml to remove Spark dependencies