@@ -8,22 +8,25 @@ import com.smockin.admin.websocket.LiveLoggingHandler;
 import com.smockin.mockserver.dto.*;
 import com.smockin.mockserver.exception.MockServerException;
 import com.smockin.mockserver.service.*;
-import com.smockin.mockserver.service.ws.SparkWebSocketEchoService;
 import com.smockin.utils.GeneralUtils;
 import com.smockin.utils.LiveLoggingUtils;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.web.embedded.jetty.JettyServletWebServerFactory;
+import org.springframework.boot.web.server.WebServer;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import spark.Request;
-import spark.Response;
-import spark.Spark;
 
+import javax.servlet.MultipartConfigElement;
+import javax.servlet.ServletRegistration;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -42,43 +45,29 @@ public class MockedRestServerEngine {
 
     @Autowired
     private RuleEngine ruleEngine;
-
     @Autowired
     private HttpProxyService proxyService;
-
     @Autowired
     private MockOrderingCounterService mockOrderingCounterService;
-
     @Autowired
     private InboundParamMatchService inboundParamMatchService;
-
     @Autowired
     private WebSocketService webSocketService;
-
     @Autowired
     private ServerSideEventService serverSideEventService;
-
     @Autowired
     private MockedRestServerEngineUtils mockedRestServerEngineUtils;
-
     @Autowired
     private LiveLoggingHandler liveLoggingHandler;
-
     @Autowired
     private SmockinUserService smockinUserService;
-
     @Autowired
     private ProxyMappingCache proxyMappingCache;
 
-
-    private static final String SPARK_WILDCARD_PATH = "/*";
-
-    // Server state
+    private WebServer server;
     private final Object serverStateMonitor = new Object();
     private final MockServerState serverState = new MockServerState(false, 0);
 
-    // Live logging response blocker
-    // TODO find a smarter way to do this (i.e BlockingQueue...)
     private final Object responseBlockingMonitor = new Object();
     private final Map<String, Optional<LiveLoggingUserOverrideResponse>> responseAmendments = new HashMap<>();
     private final List<BlockedPathToRelease> userCallsToRelease = new ArrayList<>();
@@ -86,32 +75,232 @@ public class MockedRestServerEngine {
     private final AtomicReference<List<LiveBlockPath>> liveBlockPathsRef = new AtomicReference<>(new ArrayList<>());
     private final AtomicBoolean proxyModeEnabled = new AtomicBoolean();
 
-
     public void start(final MockedServerConfigDTO config,
                       final List<ProxyForwardConfigCacheDTO> allProxyForwardConfig) throws MockServerException {
 
         logger.debug("start called");
 
-        initServerConfig(config);
+        synchronized (serverStateMonitor) {
+            if (serverState.isRunning()) {
+                shutdown();
+            }
+        }
+
+        updateProxyMode(config.isProxyMode());
+        proxyMappingCache.init(allProxyForwardConfig);
 
         final boolean isMultiUserMode = UserModeEnum.ACTIVE.equals(smockinUserService.getUserMode());
 
-        updateProxyMode(config.isProxyMode());
+        initServer(config, isMultiUserMode);
+    }
 
-        // Define all web socket routes first as the Spark framework requires this
-        buildWebSocketEndpoints(isMultiUserMode);
+    private void initServer(final MockedServerConfigDTO config, final boolean isMultiUserMode) throws MockServerException {
+        try {
+            JettyServletWebServerFactory factory = new JettyServletWebServerFactory(config.getPort());
 
-        // Handle Cross-Origin Resource Sharing (CORS) support
-        handleCORS(config);
+            factory.addServerCustomizers(jettyServer -> {
+                if (jettyServer.getThreadPool() instanceof org.eclipse.jetty.util.thread.QueuedThreadPool pool) {
+                    pool.setMaxThreads(config.getMaxThreads());
+                    pool.setMinThreads(config.getMinThreads());
+                    pool.setIdleTimeout(config.getTimeOutMillis());
+                }
+            });
 
-        proxyMappingCache.init(allProxyForwardConfig);
+            HttpServlet mockHandler = new HttpServlet() {
+                @Override
+                protected void service(HttpServletRequest req, HttpServletResponse resp) throws IOException {
+                    handleRequest(req, resp, isMultiUserMode, config);
+                }
+            };
 
-        // Next handle all HTTP RESTFul web service routes
-        buildGlobalHttpEndpointsHandler(isMultiUserMode);
+            factory.addInitializers(servletContext -> {
+                ServletRegistration.Dynamic registration = servletContext.addServlet("mockServlet", mockHandler);
+                registration.addMapping("/*");
 
-        applyTrafficLogging(config.isProxyMode());
+                registration.setMultipartConfig(new MultipartConfigElement(
+                        System.getProperty("java.io.tmpdir"),
+                        -1L,
+                        -1L,
+                        0));
+            });
 
-        initServer(config.getPort());
+            this.server = factory.getWebServer();
+            this.server.start();
+
+            synchronized (serverStateMonitor) {
+                serverState.setRunning(true);
+                serverState.setPort(server.getPort());
+            }
+        } catch (Exception ex) {
+            throw new MockServerException(ex);
+        }
+    }
+
+    private void handleRequest(HttpServletRequest request, HttpServletResponse response, boolean isMultiUserMode, MockedServerConfigDTO config) throws IOException {
+
+        final String traceId = GeneralUtils.generateUUID();
+        request.setAttribute(GeneralUtils.LOG_REQ_ID, traceId);
+        response.addHeader(GeneralUtils.LOG_REQ_ID, traceId);
+
+        // CORS
+        handleCORS(request, response, config);
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            response.setStatus(HttpStatus.OK.value());
+            return;
+        }
+
+        // Live Logging - Inbound
+        broadcastInboundLogging(request, traceId);
+
+        try {
+            // Mock Processing
+            Optional<String> mockResponseOpt = mockedRestServerEngineUtils.loadMockedResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
+            String responseBody = mockResponseOpt.orElse("");
+
+            if (mockResponseOpt.isEmpty()) {
+                response.setStatus(HttpStatus.NOT_FOUND.value());
+            }
+
+            // Blocking logic
+            Optional<String> amendment = checkForAndHandleBlockSwapAndMock(request, response, responseBody, isMultiUserMode);
+            final String finalBody = amendment.orElse(responseBody);
+
+            // Live Logging - Outbound
+            broadcastOutboundLogging(request, response, finalBody, traceId);
+
+            if (finalBody != null) {
+                response.getWriter().write(finalBody);
+            }
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+        }
+    }
+
+    private void broadcastInboundLogging(HttpServletRequest request, String traceId) {
+        Map<String, String> reqHeaders = new HashMap<>();
+        Enumeration<String> headerNames = request.getHeaderNames();
+        while (headerNames.hasMoreElements()) {
+            String h = headerNames.nextElement();
+            reqHeaders.put(h, request.getHeader(h));
+        }
+        reqHeaders.put(GeneralUtils.LOG_REQ_ID, traceId);
+
+        liveLoggingHandler.broadcast(LiveLoggingUtils.buildLiveLogInboundDTO(
+                traceId,
+                request.getMethod(),
+                request.getPathInfo(),
+                reqHeaders,
+                GeneralUtils.extractRequestBody(request),
+                proxyModeEnabled.get(),
+                GeneralUtils.extractAllRequestParams(request)));
+    }
+
+    private void broadcastOutboundLogging(HttpServletRequest request, HttpServletResponse response, String body, String traceId) {
+        if (ServerSideEventService.SSE_EVENT_STREAM_HEADER.equals(response.getHeader(HttpHeaders.CONTENT_TYPE))) {
+            return;
+        }
+
+        Map<String, String> respHeaders = mockedRestServerEngineUtils.extractResponseHeadersAsMap(response);
+        respHeaders.put(GeneralUtils.LOG_REQ_ID, traceId);
+
+        liveLoggingHandler.broadcast(LiveLoggingUtils.buildLiveLogOutboundDTO(
+                traceId,
+                request.getPathInfo(),
+                response.getStatus(),
+                respHeaders,
+                body,
+                proxyModeEnabled.get()));
+    }
+
+    private Optional<String> checkForAndHandleBlockSwapAndMock(HttpServletRequest request, HttpServletResponse response, String currentBody, boolean isMultiUserMode) throws InterruptedException {
+
+        if (blockLoggingResponse(request, response, currentBody)) {
+            synchronized (responseBlockingMonitor) {
+                while (true) {
+                    responseBlockingMonitor.wait();
+                    String traceId = (String) request.getAttribute(GeneralUtils.LOG_REQ_ID);
+
+                    if (!liveBlockingModeEnabled.get()) break;
+
+                    if (isMultiUserMode && shouldReleaseUserCall(request)) break;
+
+                    if (!responseAmendments.containsKey(traceId)) continue;
+
+                    Optional<LiveLoggingUserOverrideResponse> amendmentOpt = responseAmendments.remove(traceId);
+                    if (amendmentOpt.isPresent()) {
+                        return Optional.of(amendResponse(amendmentOpt.get(), response));
+                    }
+                    break;
+                }
+            }
+        }
+        return Optional.empty();
+    }
+
+    private String amendResponse(LiveLoggingUserOverrideResponse amendment, HttpServletResponse response) {
+        amendment.getResponseHeaders().forEach(response::setHeader);
+        response.setStatus(amendment.getStatus());
+        return amendment.getBody();
+    }
+
+    private boolean blockLoggingResponse(HttpServletRequest request, HttpServletResponse response, String body) {
+        if (this.liveBlockingModeEnabled.get()) {
+            boolean match = liveBlockPathsRef.get().stream()
+                    .anyMatch(p -> p.getMethod().name().equalsIgnoreCase(request.getMethod())
+                            && GeneralUtils.matchPaths(p.getPath(), request.getPathInfo()));
+
+            if (match) {
+                liveLoggingHandler.broadcast(LiveLoggingUtils.buildLiveLogInterceptedResponseDTO(
+                        (String) request.getAttribute(GeneralUtils.LOG_REQ_ID),
+                        request.getPathInfo(),
+                        response.getStatus(),
+                        mockedRestServerEngineUtils.extractResponseHeadersAsMap(response),
+                        body,
+                        proxyModeEnabled.get()));
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private boolean shouldReleaseUserCall(HttpServletRequest request) {
+        return userCallsToRelease.stream().anyMatch(p -> {
+            if (p.getMethod() != null) {
+                return request.getMethod().equalsIgnoreCase(p.getMethod().name())
+                        && Strings.CS.equals(request.getPathInfo(), p.getPathPattern());
+            }
+            return Strings.CS.startsWith(request.getPathInfo(), p.getPathPattern());
+        });
+    }
+
+    private void handleCORS(HttpServletRequest request, HttpServletResponse response, MockedServerConfigDTO config) {
+        final String enableCors = config.getNativeProperties().get(GeneralUtils.ENABLE_CORS_PARAM);
+        if (!Boolean.TRUE.toString().equalsIgnoreCase(enableCors)) return;
+
+        response.setHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "*");
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            String reqHeaders = request.getHeader(HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS);
+            if (reqHeaders != null) response.setHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_HEADERS, reqHeaders);
+            String reqMethod = request.getHeader(HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD);
+            if (reqMethod != null) response.setHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_METHODS, reqMethod);
+        }
+    }
+
+    public void shutdown() throws MockServerException {
+        try {
+            serverSideEventService.interruptAndClearAllHeartBeatThreads();
+            if (server != null) {
+                server.stop();
+            }
+            synchronized (serverStateMonitor) {
+                serverState.setRunning(false);
+            }
+            clearState();
+        } catch (Exception ex) {
+            throw new MockServerException(ex);
+        }
     }
 
     public MockServerState getCurrentState() throws MockServerException {
@@ -120,600 +309,81 @@ public class MockedRestServerEngine {
         }
     }
 
-    public void shutdown() throws MockServerException {
-
-        try {
-
-            serverSideEventService.interruptAndClearAllHeartBeatThreads();
-
-            Spark.stop();
-
-            // Having dug around the source code, 'Spark.stop()' runs off a different thread when stopping the server and removing it's state such as routes, etc.
-            // This means that calling 'Spark.port()' immediately after stop, results in an IllegalStateException, as the
-            // 'initialized' flag is checked in the current thread and is still marked as true.
-            // (The error thrown: java.lang.IllegalStateException: This must be done before route mapping has begun)
-            // Short of editing the Spark source to fix this, I have therefore had to add this hack to buy the 'stop' thread time to complete.
-            Thread.sleep(3000);
-
-            synchronized (serverStateMonitor) {
-                serverState.setRunning(false);
-            }
-
-            clearState();
-
-        } catch (Throwable ex) {
-            throw new MockServerException(ex);
-        }
-
-    }
-
-    void initServer(final int port) throws MockServerException {
-        logger.debug("initServer called");
-
-        try {
-
-            clearState();
-
-            Spark.init();
-
-            // Blocks the current thread (using a CountDownLatch under the hood) until the server is fully initialised.
-            Spark.awaitInitialization();
-
-            synchronized (serverStateMonitor) {
-                serverState.setRunning(true);
-                serverState.setPort(port);
-            }
-
-        } catch (Throwable ex) {
-            throw new MockServerException(ex);
-        }
-
-    }
-
-    void initServerConfig(final MockedServerConfigDTO config) {
-        logger.debug("initServerConfig called");
-
-        if (logger.isDebugEnabled())
-            logger.debug(config.toString());
-
-        Spark.port(config.getPort());
-        Spark.threadPool(config.getMaxThreads(), config.getMinThreads(), config.getTimeOutMillis());
-    }
-
-    void buildWebSocketEndpoints(final boolean isMultiUserMode) {
-
-        Spark.webSocket(SPARK_WILDCARD_PATH, new SparkWebSocketEchoService(webSocketService, isMultiUserMode));
-    }
-
-    private void applyTrafficLogging(final boolean isUsingProxyMode) {
-
-        // Live logging filter
-        Spark.before((request, response) -> {
-
-            if (request.raw().getHeader(WebSocketService.WS_SEC_WEBSOCKET_KEY) != null) {
-                return;
-            }
-
-            final String traceId = GeneralUtils.generateUUID();
-
-            request.attribute(GeneralUtils.LOG_REQ_ID, traceId);
-            response.raw()
-                    .addHeader(GeneralUtils.LOG_REQ_ID, traceId);
-
-            final Map<String, String> reqHeaders = request
-                    .headers()
-                    .stream()
-                    .collect(Collectors.toMap(h -> h, h -> request.headers(h)));
-
-            reqHeaders.put(GeneralUtils.LOG_REQ_ID, traceId);
-
-            liveLoggingHandler.broadcast(
-                    LiveLoggingUtils.buildLiveLogInboundDTO(
-                        request.attribute(GeneralUtils.LOG_REQ_ID),
-                        request.requestMethod(),
-                        request.pathInfo(),
-                        reqHeaders,
-                        request.body(),
-                        isUsingProxyMode,
-                        GeneralUtils.extractAllRequestParams(request)));
-        });
-
-        Spark.afterAfter((request, response) -> {
-
-            if (request.raw().getHeader(WebSocketService.WS_SEC_WEBSOCKET_KEY) != null
-                    || ServerSideEventService.SSE_EVENT_STREAM_HEADER.equals(response.raw().getHeader(HttpHeaders.CONTENT_TYPE))) {
-                return;
-            }
-
-            final Map<String, String> respHeaders = mockedRestServerEngineUtils.extractResponseHeadersAsMap(response);
-
-            respHeaders.put(GeneralUtils.LOG_REQ_ID, request.attribute(GeneralUtils.LOG_REQ_ID));
-
-            liveLoggingHandler.broadcast(
-                    LiveLoggingUtils.buildLiveLogOutboundDTO(
-                        request.attribute(GeneralUtils.LOG_REQ_ID),
-                        request.pathInfo(),
-                        response.raw().getStatus(),
-                        respHeaders,
-                        response.body(),
-                        isUsingProxyMode));
-        });
-
-    }
-
-    void buildGlobalHttpEndpointsHandler(final boolean isMultiUserMode) {
-        logger.debug("buildGlobalHttpEndpointsHandler called");
-
-        // HEAD
-        Spark.head(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-            checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return "";
-        });
-
-        // GET
-        Spark.get(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            if (isWebSocketUpgradeRequest(request)) {
-                response.status(HttpStatus.OK.value());
-                return null;
-            }
-
-            final String responseBody = processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            final Optional<String> amendmentOpt =
-                    checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return (amendmentOpt.isPresent())
-                    ? amendmentOpt.get()
-                    : responseBody;
-        });
-
-        // POST
-        Spark.post(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            final String responseBody = processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            final Optional<String> amendmentOpt =
-                    checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return (amendmentOpt.isPresent())
-                    ? amendmentOpt.get()
-                    : responseBody;
-        });
-
-        // PUT
-        Spark.put(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            final String responseBody = processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            final Optional<String> amendmentOpt =
-                    checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return (amendmentOpt.isPresent())
-                    ? amendmentOpt.get()
-                    : responseBody;
-        });
-
-        // DELETE
-        Spark.delete(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            final String responseBody = processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            final Optional<String> amendmentOpt =
-                    checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return (amendmentOpt.isPresent())
-                    ? amendmentOpt.get()
-                    : responseBody;
-        });
-
-        // PATCH
-        Spark.patch(GeneralUtils.PATH_WILDCARD, (request, response) -> {
-
-            final String responseBody = processResponse(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            final Optional<String> amendmentOpt =
-                    checkForAndHandleBlockSwapAndMock(request, response, isMultiUserMode, proxyModeEnabled.get());
-
-            return (amendmentOpt.isPresent())
-                    ? amendmentOpt.get()
-                    : responseBody;
-        });
-
-    }
-
-    String processResponse(final Request request,
-                   final Response response,
-                   final boolean isMultiUserMode,
-                   final boolean isProxyMode) {
-
-        return mockedRestServerEngineUtils.loadMockedResponse(request, response, isMultiUserMode, isProxyMode)
-                .orElseGet(() ->
-                        handleNotFoundResponse(response));
-    }
-
-    Optional<String> checkForAndHandleBlockSwapAndMock(final Request request,
-                                                       final Response response,
-                                                       final boolean isMultiUserMode,
-                                                       final boolean isProxyMode)
-            throws InterruptedException {
-
-        if (blockLoggingResponse(request, response, isProxyMode)) {
-
-            logger.debug("Endpoint match made. Blocking response...");
-
-            synchronized (responseBlockingMonitor) {
-
-                while (true) {
-
-                    // Wait for response amendment for this request (by traceId)
-                    responseBlockingMonitor.wait();
-
-                    final String traceId = request.attribute(GeneralUtils.LOG_REQ_ID);
-
-                    // Release request if liveBlocking is disabled at any stage
-                    if (!liveBlockingModeEnabled.get()) {
-                        if (logger.isDebugEnabled()) {
-                            logger.debug("Releasing blocked request with traceId: " + traceId + " as blocking mode has been disabled");
-                        }
-                        break;
-                    }
-
-                    if (isMultiUserMode) {
-
-                        if (userCallsToRelease
-                                .stream()
-                                .anyMatch(p -> {
-
-                                    if (p.getMethod() != null) {
-
-                                        return request.requestMethod().equalsIgnoreCase(p.getMethod().name())
-                                                && StringUtils.equals(request.pathInfo(), p.getPathPattern());
-                                    }
-
-                                    // Is Admin
-                                    if (GeneralUtils.URL_PATH_SEPARATOR.equals(p.getPathPattern())) {
-                                        // Nasty solution to a problem of how do we identify the call is to an admin's mock...
-                                        // TODO This will improve when we update isInboundPathMultiUserPath to use a cache instead.
-                                        final String userCtxPathSegment = mockedRestServerEngineUtils.extractMultiUserCtxPathSegment(request.pathInfo());
-                                        return !mockedRestServerEngineUtils.isInboundPathMultiUserPath(userCtxPathSegment);
-                                    }
-
-                                    return StringUtils.startsWith(request.pathInfo(), p.getPathPattern());
-                                })
-                        ) {
-                            break;
-                        }
-
-                    }
-
-                    if (!responseAmendments.containsKey(traceId)) {
-                        // No amendment found so continue waiting...
-                        continue;
-                    }
-
-                    if (logger.isDebugEnabled()) {
-                        logger.debug("Releasing blocked request with traceId: " + traceId + " as response provided");
-                    }
-
-                    final Optional<LiveLoggingUserOverrideResponse> responseAmendmentOpt
-                            = responseAmendments.get(traceId);
-
-                    // Could be no amendment is provided (in which case this request will default to the original response)
-                    if (responseAmendmentOpt.isPresent()) {
-
-                        final String body = amendResponse(responseAmendmentOpt, response);
-
-                        return Optional.of(body);
-                    }
-
-                    break;
-                }
-            }
-
-        }
-
-        return Optional.empty();
-    }
-
-    private String amendResponse(final Optional<LiveLoggingUserOverrideResponse> responseAmendmentOpt,
-                               final Response response) {
-
-        final LiveLoggingUserOverrideResponse responseAmendment = responseAmendmentOpt.get();
-
-        if (!responseAmendment.getResponseHeaders().isEmpty()) {
-
-            final HttpServletResponse httpServletResponse = response.raw();
-
-            responseAmendment
-                .getResponseHeaders()
-                .entrySet()
-                .forEach(h -> {
-                    if (httpServletResponse.containsHeader(h.getKey())) {
-                        httpServletResponse.setHeader(h.getKey(), h.getValue());
-                    } else {
-                        httpServletResponse.addHeader(h.getKey(), (h.getValue() != null) ? h.getValue() : ""); // Allow for blank header values
-                    }
-                });
-
-            // Clear all other headers, which may have been removed or renamed
-            httpServletResponse
-                .getHeaderNames()
-                .stream()
-                .forEach(h -> {
-                    if (!responseAmendment.getResponseHeaders().containsKey(h)) {
-                        httpServletResponse.setHeader(h, null);
-                    }
-                });
-
-        }
-
-        response.status(responseAmendment.getStatus());
-        response.body(responseAmendment.getBody());
-
-        return responseAmendment.getBody();
-    }
-
-    private String handleNotFoundResponse(final Response response) {
-
-        response.status(HttpStatus.NOT_FOUND.value());
-
-        return "";
-    }
-
-    private boolean isWebSocketUpgradeRequest(final Request request) {
-
-        final Set<String> headerNames = request.headers();
-
-        return headerNames.contains(HttpHeaders.UPGRADE)
-                && headerNames.contains("Sec-WebSocket-Key")
-                && "websocket".equalsIgnoreCase(request.headers(HttpHeaders.UPGRADE));
-    }
-
-    boolean blockLoggingResponse(final Request request,
-                          final Response response,
-                          final boolean proxyMode) {
-
-        if (logger.isDebugEnabled()) {
-            logger.debug("liveBlockEnabled: " + liveBlockingModeEnabled.get());
-            logger.debug("inbound method: " + request.requestMethod());
-            logger.debug("inbound path: " + request.pathInfo());
-        }
-
-        if (this.liveBlockingModeEnabled.get()) {
-
-            // Check if this call matches any endpoints that should be blocked...
-            if (liveBlockPathsRef.get()
-                    .stream()
-                    .anyMatch(p ->
-                            p.getMethod().name().equalsIgnoreCase(request.requestMethod())
-                                    && GeneralUtils.matchPaths(p.getPath(), request.pathInfo()))) {
-
-                // If so then send response details to live logging console via WS...
-                liveLoggingHandler.broadcast(
-                        LiveLoggingUtils.buildLiveLogInterceptedResponseDTO(
-                                request.attribute(GeneralUtils.LOG_REQ_ID),
-                                request.pathInfo(),
-                                response.raw().getStatus(),
-                                mockedRestServerEngineUtils.extractResponseHeadersAsMap(response),
-                                response.body(),
-                                proxyMode));
-
-                return true;
-            }
-
-        }
-
-        return false;
-    }
-
-    void clearState() {
-
-        // Proxy related state
-        webSocketService.clearSession();
-        proxyService.clearAllSessions();
-        mockOrderingCounterService.clearState();
-        serverSideEventService.clearState();
-
-    }
-
-    void handleCORS(final MockedServerConfigDTO config) {
-
-        final String enableCors = config.getNativeProperties().get(GeneralUtils.ENABLE_CORS_PARAM);
-
-        if (!Boolean.TRUE.toString().equalsIgnoreCase(enableCors)) {
-            return;
-        }
-
-        Spark.options(SPARK_WILDCARD_PATH, (request, response) -> {
-
-            final String accessControlRequestHeaders = request.headers(HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS);
-
-            if (accessControlRequestHeaders != null) {
-                response.header(HttpHeaders.ACCESS_CONTROL_ALLOW_HEADERS, accessControlRequestHeaders);
-            }
-
-            final String accessControlRequestMethod = request.headers(HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD);
-
-            if (accessControlRequestMethod != null) {
-
-                response.header(HttpHeaders.ACCESS_CONTROL_ALLOW_METHODS, accessControlRequestMethod);
-            }
-
-            return HttpStatus.OK.name();
-        });
-
-        Spark.before((request, response) ->
-            response.header(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, GeneralUtils.PATH_WILDCARD));
-
-    }
-
     public void updateProxyMode(final boolean enable) {
         proxyModeEnabled.set(enable);
     }
 
-    public void releaseBlockedLiveLoggingResponse(final String traceId,
-                                                  final Optional<LiveLoggingUserOverrideResponse> responseAmendmentOpt) {
-
-        if (logger.isDebugEnabled())
-            logger.debug("Adding amended response for blocked request with traceId " + traceId);
-
+    public void releaseBlockedLiveLoggingResponse(final String traceId, final Optional<LiveLoggingUserOverrideResponse> responseAmendmentOpt) {
         synchronized (responseBlockingMonitor) {
-
             responseAmendments.put(traceId, responseAmendmentOpt);
-            responseBlockingMonitor.notifyAll(); // wake up all waiting threads, so they can check if their is a response amendment.
+            responseBlockingMonitor.notifyAll();
         }
-
     }
 
     public void updateLiveBlockingMode(final boolean liveBlockEnabled) {
-
-        if (logger.isDebugEnabled())
-            logger.debug("Live blocking enabled: " + liveBlockEnabled);
-
         liveBlockingModeEnabled.set(liveBlockEnabled);
-
         if (!liveBlockingModeEnabled.get()) {
-
-            logger.debug("releasing all outstanding blocked requests...");
-
             synchronized (responseBlockingMonitor) {
-                responseBlockingMonitor.notifyAll(); // wake up all waiting threads, so they can check if their is a response amendment.
+                responseBlockingMonitor.notifyAll();
             }
-
         }
-
     }
 
     public void notifyBlockedLiveLoggingCalls(final RestMethodEnum method, final String userCtxOrFullPath) {
-
-
-        if (logger.isDebugEnabled()) {
-            logger.debug("releasing all outstanding blocked requests for user ctx path: " + method + userCtxOrFullPath);
-        }
-
         final BlockedPathToRelease blockedPathToRelease = new BlockedPathToRelease(method, userCtxOrFullPath);
-
-        // Release any callers currently blocked on this endpoint.
         synchronized (responseBlockingMonitor) {
-
-            if (logger.isDebugEnabled())
-                logger.debug("Adding: " + blockedPathToRelease + " to userCallsToRelease");
-
             userCallsToRelease.add(blockedPathToRelease);
-
-            if (logger.isDebugEnabled())
-                logger.debug("userCallsToRelease size : " + userCallsToRelease.size());
-
-            responseBlockingMonitor.notifyAll(); // wake up all waiting threads, so they can check if their is a response amendment.
-
+            responseBlockingMonitor.notifyAll();
         }
-
-        // Assume all blocked callers are released after 8 secs and remove entry...
-        Executors.newScheduledThreadPool(1)
-            .schedule(() -> {
-                synchronized (responseBlockingMonitor) {
-
-                    if (logger.isDebugEnabled())
-                        logger.debug("Removing: " + blockedPathToRelease + " from userCallsToRelease");
-
-                    userCallsToRelease.remove(blockedPathToRelease);
-
-                    if (logger.isDebugEnabled())
-                        logger.debug("userCallsToRelease size : " + userCallsToRelease.size());
-
-                }
+        Executors.newScheduledThreadPool(1).schedule(() -> {
+            synchronized (responseBlockingMonitor) {
+                userCallsToRelease.remove(blockedPathToRelease);
+            }
         }, 8000, TimeUnit.MILLISECONDS);
-
     }
 
-
-    public void addPathToLiveBlocking(final RestMethodEnum method,
-                                      final String path,
-                                      final String ownerUserId) throws ValidationException {
-
-        if (logger.isDebugEnabled())
-            logger.debug("Adding blocking rule for: " + method.name() + " " + path);
-
+    public void addPathToLiveBlocking(final RestMethodEnum method, final String path, final String ownerUserId) throws ValidationException {
         if (liveBlockPathsRef.get().contains(new LiveBlockPath(method, path, ownerUserId))) {
             throw new ValidationException("This endpoint is already being blocked");
         }
-
         liveBlockPathsRef.get().add(new LiveBlockPath(method, path, ownerUserId));
-
-        if (logger.isDebugEnabled())
-            logger.debug("blocking rule size: " + liveBlockPathsRef.get().size());
-
     }
 
-    public void removePathFromLiveBlocking(final RestMethodEnum method,
-                                           final String path,
-                                           final String ownerUserId) {
-
-        if (logger.isDebugEnabled())
-            logger.debug("Removing blocking rule for: " + method.name() + " " + path);
-
-//        liveBlockPathsRef.get().remove(new LiveBlockPath(method, path, ownerUserId));
-
-        liveBlockPathsRef.compareAndSet(
-                liveBlockPathsRef.get(),
-                liveBlockPathsRef.get()
-                        .stream()
-                        .filter(p ->
-                                !(StringUtils.equalsIgnoreCase(p.getPath(), path)
-                                    && p.getMethod().equals(method)
-                                    && StringUtils.equalsIgnoreCase(p.getOwnerUserId(), ownerUserId)))
-                        .collect(Collectors.toList()));
-
-        if (logger.isDebugEnabled())
-            logger.debug("blocking rule size: " + liveBlockPathsRef.get().size());
-
-    }
-
-    public long countLiveBlockingPathsForUser(final RestMethodEnum method,
-                                           final String path,
-                                           final String ownerUserId) {
-
-            return liveBlockPathsRef.get()
-                    .stream()
-                    .filter(p ->
-                            StringUtils.equalsIgnoreCase(p.getPath(), path)
+    public void removePathFromLiveBlocking(final RestMethodEnum method, final String path, final String ownerUserId) {
+        liveBlockPathsRef.compareAndSet(liveBlockPathsRef.get(),
+                liveBlockPathsRef.get().stream()
+                        .filter(p -> !(Strings.CI.equals(p.getPath(), path)
                                 && p.getMethod().equals(method)
-                                && StringUtils.equalsIgnoreCase(p.getOwnerUserId(), ownerUserId))
-                    .count();
+                                && Strings.CI.equals(p.getOwnerUserId(), ownerUserId)))
+                        .collect(Collectors.toList()));
+    }
+
+    public long countLiveBlockingPathsForUser(final RestMethodEnum method, final String path, final String ownerUserId) {
+        return liveBlockPathsRef.get().stream()
+                .filter(p -> Strings.CI.equals(p.getPath(), path)
+                        && p.getMethod().equals(method)
+                        && Strings.CI.equals(p.getOwnerUserId(), ownerUserId))
+                .count();
     }
 
     public void clearAllPathsFromLiveBlocking() {
-
-        logger.debug("clearing down all blocking rules...");
-
         liveBlockPathsRef.get().clear();
     }
 
     public void clearAllPathsFromLiveBlockingForUser(final String ownerUserId) {
-
-        if (logger.isDebugEnabled())
-            logger.debug("clearing down all blocking rules for user: " + ownerUserId);
-
-        liveBlockPathsRef.compareAndSet(
-                liveBlockPathsRef.get(),
-                liveBlockPathsRef.get()
-                        .stream()
-                        .filter(p ->
-                            !StringUtils.equalsIgnoreCase(p.getOwnerUserId(), ownerUserId))
-                        .collect(Collectors.toList()));
-
-
-        if (logger.isDebugEnabled())
-            logger.debug("blocking rule size: " + liveBlockPathsRef.get().size());
-
+        liveBlockPathsRef.compareAndSet(liveBlockPathsRef.get(),
+                liveBlockPathsRef.get().stream()
+                        .filter(p -> !Strings.CI.equals(p.getOwnerUserId(), ownerUserId))
+                        .toList());
         if (liveBlockPathsRef.get().isEmpty()) {
             updateLiveBlockingMode(false);
         }
-
     }
 
+    void clearState() {
+        webSocketService.clearSession();
+        proxyService.clearAllSessions();
+        mockOrderingCounterService.clearState();
+        serverSideEventService.clearState();
+    }
 }
